MMCPA-0: Update to remove overflow-y to fix select2.

--- a/docroot/themes/custom/alshaya_white_label/sass/base/_base.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/base/_base.scss
@@ -11,7 +11,6 @@ html {
 html,
 body {
   height: 100%;
-  overflow-y: scroll;
 }
 
 body {
